spacing fix

--- a/app/assets/stylesheets/controls.scss
+++ b/app/assets/stylesheets/controls.scss
@@ -15,6 +15,11 @@
   &:hover{
     background: red;
   }
+
+  input{
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
 }
 
 .game_controls{
